@@ -75,11 +75,3 @@ class CZ(Czechia):
 
 class CZE(Czechia):
     pass
-
-
-class Czech(Czechia):
-    def __init__(self, **kwargs):
-        warnings.warn(
-            "Czech is deprecated, use Czechia instead.", DeprecationWarning
-        )
-        super(Czech, self).__init__(**kwargs)
