@@ -20,6 +20,7 @@ Released ???????? ???, ????
 - Italy fixes #546 (dr-p, rtraverso86)
 - Korea fixes #535 (0xF4D3C0D3)
 - Colombia fixes #564 (jahirfiquitiva)
+- Czech (ie: misspelled Czechia) deprecated support removed (dr-p)
 
 Version 0.11.3.1
 ================
